--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>hi</title>
+        <title>Gametrix</title>
         <link rel="stylesheet" href="css/styles.css">
 
    
@@ -39,6 +39,18 @@
     </div>
 
     
+    <div id="chat-container">
+        <div id="chat-display"></div>
+        <input type="text" id="message-input" placeholder="Type your message...">
+        <button onclick="sendMessage()">Send</button>
+    </div>
+    <script src="https://www.gstatic.com/firebasejs/9.2.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.2.0/firebase-database.js"></script>
+    <script src="app.js"></script>
+
+
+
+
 
     <script src="js/SaveData.js"></script>
     <script src="js/maincon.js"></script>
