--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
     </div>
 
     
-
-
+<!--comunity chat display-->
+    <div id="chat-container">
+        <div id="chat-display"></div>
+        <input type="text" id="message-input" placeholder="Type your message...">
+        <button onclick="sendMessage()">Send</button>
+    </div>
 
 
 
