--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
 
         <button class="home" onclick="link()">Links</button>
 
+        <button class="home" onclick="Comments()">Comments</button>
+
         <button class="home" onclick="other()">other</button>
 
         <button class="home" onclick="signup()">Sign up</button>
 
         <button class="home" onclick="Login()">Login</button>
+
 
         </center>
     </div>
@@ -39,12 +42,6 @@
     </div>
 
     
-<!--comunity chat display-->
-    <div id="chat-container">
-        <div id="chat-display"></div>
-        <input type="text" id="message-input" placeholder="Type your message...">
-        <button onclick="sendMessage()">Send</button>
-    </div>
 
 
 
